# freedom-daw-gui

./: .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  audio-button.cpp  audio-button.hpp  audio-panel.cpp  audio-panel.hpp  central-widget.cpp  central-widget.hpp  close-project-command.cpp  close-project-command.hpp  command.cpp  command.hpp  controller.cpp  controller.hpp  divider.cpp  divider.hpp  driver.cpp  driver.hpp  edit-menu.cpp  edit-menu.hpp  exception.cpp  exception.hpp  file-menu.cpp  file-menu.hpp  help-menu.cpp  help-menu.hpp  invalid-response-code.cpp  invalid-response-code.hpp  knob.cpp  knob.hpp  main-window.cpp  main-window.hpp  main.cpp  menu-bar.cpp  menu-bar.hpp  new-project-command.cpp  new-project-command.hpp  new-track-command.cpp  (+55 more)
mock-driver/: README.md  main.cpp
stylesheets/: default.qss
